--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Запускается при пуше в main
+      - main  # Запускать при пуше в main
 
 permissions:
   pages: write
@@ -17,15 +17,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Copy files to public directory
+      - name: Create public directory and copy files
         run: |
           mkdir -p public
-          cp -r * public  # Копируем все файлы в public/
+          cp -r * public  
 
-      - name: Upload artifact
+      - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: public  # Загружаем только файлы из папки public/
-
+          path: public  
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
