--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,11 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Запускать при пуше в main
-
-permissions:
-  pages: write
-  id-token: write
+      - main  # Запускается при пуше в main
 
 jobs:
   deploy:
@@ -17,14 +13,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Create public directory and copy files
-        run: |
-          mkdir -p public
-          cp -r * public  
-
-      - name: Upload pages artifact
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: public  
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages  # На эту ветку будет деплоиться
+          folder: public    # Папка с файлами для деплоя (если файл в корне, можно указать .)
