--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Запускается при пуше в main
+      - main  # Запускаем на пуш в main
 
 jobs:
   deploy:
@@ -16,5 +16,5 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages  # На эту ветку будет деплоиться
-          folder: public    # Папка с файлами для деплоя (если файл в корне, можно указать .)
+          branch: main  # Деплоим в ветку main
+          folder: .      # Папка с файлами для деплоя (если файл в корне, указываем .)
